Some updates to test api calls
