# src/routes/routes.js
@@ -3,6 +3,7 @@ import eventController from "../controllers/eventController.js";
 import addressEventController from "../controllers/addressEventController.js";
 import routesEventController from "../controllers/routesEventController.js";
 import eventStatusController from '../controllers/eventStatusController.js';
+import {verifyToken }from "../middlewares/authMiddleware.js";
 
 const router = Router();
 
@@ -12,6 +13,7 @@ router.get('/events/:id', eventController.getEventById);
 router.put('/events/:id', eventController.updateEvent);
 router.delete('/events/:id', eventController.deleteEvent);
 router.put('/events/:id/status', eventController.updateEventStatus);
+router.get('/events/my', verifyToken, eventController.getUserEvents);
 
 router.get('/addressEvents', addressEventController.getAllAddressEvents)
 router.post('/addressEvents', addressEventController.createAddressEvent);
